--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Дом плитки</title>
+	<meta name="description" content="разнообразные плиточные продукты от популярных брендов">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/mobile.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+	<link type="image/x-icon" href="/img/logo.ico" rel="shortcut icon">
 </head>
 
 <body>
@@ -75,7 +77,7 @@
 			<div class="container">
 				<div class="header__center-body">
 					<div class="header__center-left">
-						<a href="#" class="header__logo logo">
+						<a href="javascript:void(0)" class="header__logo logo">
 							<img class="logo__img" src="img/icons/logo.svg" alt="logo">
 							<span class="logo__title">Дом плитки</span>
 						</a>
@@ -212,7 +214,7 @@
 							<path d="M11.25 15.5L6.25 10.5L11.25 5.5" stroke="#1C2F47" stroke-width="1.5" stroke-linecap="round"
 								stroke-linejoin="round" />
 						</svg>
-						<span class="catalog__breadcrumbs-title">regerhg</span>
+						<span class="catalog__breadcrumbs-title"></span>
 					</button>
 					<button class="close" id="close-catalog">
 						<svg width="19" height="20" viewBox="0 0 19 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -394,7 +396,7 @@
 
 	</header>
 
-	<section class="section">
+	<section class="section banner">
 		<div class="container">
 			<div class="swiper banner-slider">
 				<div class="swiper-wrapper">
@@ -806,6 +808,7 @@
 	</footer>
 
 	<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+	<script src="js/sliders.js"></script>
 	<script src="js/mobile.js"></script>
 	<script src="js/app.js"></script>
 </body>
