--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/mobile.css">
 	</noscript>
-	<link rel="preconnect>" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
+	<link rel="preconnect" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
 	<link type="image/x-icon" href="/img/logo.ico" rel="shortcut icon">
 </head>
 
