--- a/index.html
+++ b/index.html
@@ -827,9 +827,9 @@
 		</div>
 	</footer>
 
-	<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-	<script src="js/sliders.js"></script>
-	<script src="js/mobile.js"></script>
+	<script defer src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+	<script defer src="js/sliders.js"></script>
+	<script defer src="js/mobile.js"></script>
 	<script src="js/app.js"></script>
 </body>
 
