--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/mobile.css">
 	</noscript>
-	<link rel="preconnect" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
+	<link rel="preconnect" href="https://cdn.jsdelivr.net">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
 	<link type="image/x-icon" href="/img/logo.ico" rel="shortcut icon">
 </head>
 
@@ -469,7 +470,7 @@
 				<div class="swiper collection__slider">
 					<div class="swiper-wrapper collection__slider-wrapper">
 						<div class="swiper-slide collection__slider-slide">
-							<img class="collection__slider-img" src="img/collection/1.jpg" alt="for the kitchen">
+							<img class="collection__slider-img" src="img/collection/1.webp" alt="for the kitchen">
 							<div class="collection__content">
 								<div class="collection__category">
 									Для кухни
@@ -491,7 +492,7 @@
 							</div>
 						</div>
 						<div class="swiper-slide collection__slider-slide">
-							<img class="collection__slider-img" src="img/collection/2.jpg" alt="for living room">
+							<img class="collection__slider-img" src="img/collection/2.webp" alt="for living room">
 							<div class="collection__content">
 								<div class="collection__category">
 									Для гостиной
@@ -513,7 +514,7 @@
 							</div>
 						</div>
 						<div class="swiper-slide collection__slider-slide">
-							<img class="collection__slider-img" src="img/collection/1.jpg" alt="for the kitchen">
+							<img class="collection__slider-img" src="img/collection/1.webp" alt="for the kitchen">
 							<div class="collection__content">
 								<div class="collection__category">
 									Для улицы
@@ -535,7 +536,7 @@
 							</div>
 						</div>
 						<div class="swiper-slide collection__slider-slide">
-							<img class="collection__slider-img" src="img/collection/2.jpg" alt="for living room">
+							<img class="collection__slider-img" src="img/collection/2.webp" alt="for living room">
 							<div class="collection__content">
 								<div class="collection__category">
 									Для кухни
@@ -557,7 +558,7 @@
 							</div>
 						</div>
 						<div class="swiper-slide collection__slider-slide">
-							<img class="collection__slider-img" src="img/collection/1.jpg" alt="for the kitchen">
+							<img class="collection__slider-img" src="img/collection/1.webp" alt="for the kitchen">
 							<div class="collection__content">
 								<div class="collection__category">
 									Для улицы
@@ -597,10 +598,10 @@
 							спален,
 							кухонь, гостиных и других керамических изделий.
 						</p>
-						<img class="about__left-img" src="img/about/2.jpg" alt="">
+						<img class="about__left-img" src="img/about/2.webp" alt="">
 					</div>
 					<div class="about__center">
-						<img class="about__center-img" src="img/about/1.jpg" alt="">
+						<img class="about__center-img" src="img/about/1.webp" alt="">
 					</div>
 					<div class="about__right">
 						<p class="txt">
@@ -635,8 +636,8 @@
 			<div class="container">
 				<div class="section__bg-body">
 					<div class="section__imgs">
-						<img src="img/benefits/1.jpg" alt="">
-						<img class="section__imgs-img_absolute" src="img/benefits/2.jpg" alt="">
+						<img src="img/benefits/1.webp" alt="">
+						<img class="section__imgs-img_absolute" src="img/benefits/2.webp" alt="">
 					</div>
 					<span class="benefits__title">Десять существенных причин заказать плитку в нашем магазине</span>
 				</div>
@@ -738,7 +739,7 @@
 			<span class="section__title">Новости</span>
 			<div class="news__body">
 				<div class="news__item">
-					<img class="news__img" src="img/news/1.jpg" alt="image news">
+					<img class="news__img" src="img/news/1_1.webp" alt="image news">
 					<span class="news__time">03.05.2023</span>
 					<h3 class="news__title">Преимущества клинкерной плитки</h3>
 					<a href="#" class="news__read">Читать полностью</a>
@@ -750,7 +751,7 @@
 					<a href="#" class="news__read">Читать полностью</a>
 				</div>
 				<div class="news__item">
-					<img class="news__img" src="img/news/1.jpg" alt="image news">
+					<img class="news__img" src="img/news/2.webp" alt="image news">
 					<span class="news__time">01.05.2023</span>
 					<h3 class="news__title">Достоинства керамической плитки</h3>
 					<a href="#" class="news__read">Читать полностью</a>
@@ -830,7 +831,7 @@
 	<script defer src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 	<script defer src="js/sliders.js"></script>
 	<script defer src="js/mobile.js"></script>
-	<script src="js/app.js"></script>
+	<script defer src="js/app.js"></script>
 </body>
 
 </html>
